# laba5

./: CMakeLists.txt  main.cpp  pchelci.txt
